# syrup2d

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  syrup-engine.rc  syrup2d.code-workspace  syrup2d.rc  vcpkg.json
assets/objects/player/: player.lua
assets/scripts/engine/: keyboard.lua
assets/shaders/: framebuffer.frag  rectangle.vert  sprite.vert
assets/sprites/: default.spr
data/shaders/: sprite.frag  sprite.vert
dependencies/cglm/lib/: cglm.lib
dependencies/glad/include/glad/: glad.h
dependencies/glad/lib/: glad.lib
dependencies/lua5.4/include/: lua_all.h
dependencies/md5/lib/: md5.lib
dependencies/stb/lib/: stb.lib
dependencies/stb/src/: stb_image.c
editor/: meta.sym
editor/.syrup/api/: graphics.lua  input.lua  objects.lua  resources.lua  scenes.lua  syrup.lua
editor/.syrup/scripts/syrup/: arithmetic.lua  init.lua  input.lua
editor/.syrup/shaders/: framebuffer.vert
editor/.syrup/sprites/: default.sys
editor/objects/: instance.lua  scene_editor_b1.lua  test.lua  tooltip.lua  ui_element.lua
editor/scenes/: BasicEditor.syc  SceneEditorB1.syc  awesome.syc
editor/sprites/: niko_wakeup.sys  scene_editor_icon.sys  testing_sprite.sys
resources/: game.syr  syrup.code-workspace
resources/engine/api/: graphics.lua  input.lua  objects.lua  pc_input.lua  resources.lua  syrup.lua
resources/engine/objects/: rubber.lua
resources/engine/objects/editor/: button.lua  command.lua  control.lua  game_data.lua  importer.lua  spawner.lua  textbox.lua  ui_controller.lua  viewer.lua  wallpaper.lua  window.lua
resources/engine/scripts/syrup/: color.lua  init.lua  input.lua  oop.lua  ui.lua
resources/engine/shaders/: global.glsl  rectangle.frag  sprite.frag  sprite.vert
resources/engine/sprites/: icon.spr.syr  kill_yourself.spr.syr  ui_font.spr.syr
resources/import/: Departure Mono.aseprite  ui_font.aseprite
resources/objects/: dummy.lua  loggable.lua  rubber.lua
resources/objects/engine/ui/: button.lua  debug_menu.lua  list.lua  textbox.lua
resources/objects/engine/ui/modals/: game_data_modal.lua  modal.lua  spawn_object_modal.lua  sprite_import_modal.lua  sprite_open_modal.lua  sprite_view_modal.lua
resources/objects/pizza/: pizza.lua
resources/objects/player/: player.lua
resources/objects/ui/: debug_menu.lua  list.lua
resources/objects/ui/button/: button.lua
resources/objects/ui/debug_menu/: debug_menu.lua
resources/objects/ui/list/: list.lua
resources/objects/ui/modals/: game_data_modal.lua  modal.lua
resources/objects/ui/modals/game_data_modal/: game_data_modal.lua
resources/objects/ui/modals/modal/: modal.lua
resources/objects/ui/modals/sprite_import_modal/: sprite_import_modal.lua
resources/objects/ui/textbox/: textbox.lua
resources/scripts/engine/: init.lua  mouse.lua
resources/scripts/ui/: button.lua  info.lua  menu.lua  text.lua
resources/shaders/: sprite.frag  sprite.vert
resources/sprites/: default.syrspr  font.syrspr  smile.syrspr  ui_font.syrspr  vap.spr  vap.syrspr  wallpaper.syrspr
src/: engine.c  engine.h  main.c
src/data/: crypto.c  crypto.h  fs.c  fs.h  hashtable.c  hashtable.h  result.c  result.h  stringext.c  stringext.h  vector.c  vector.h
src/engine/: controller.c  controller.h  debug_menu.h  engine.c  engine.h  object_controller.c  object_controller.h  renderer.c  renderer.h  sprite_manager.c  sprite_manager.h  window.c  window.h
src/game/: game.c  game.h
src/graphics/: color.c  color.h  mesh.h  opengl.c  opengl.h  renderer.c  renderer.h  shader.c  shader.h  sprite.c  sprite.h
src/input/: keyboard_mouse.c  keyboard_mouse.h
src/resources/: cursor.h  fs.c  fs.h  resource_manager.c  resource_manager.h  scene.c  scene.h  sprite.c  sprite.h
src/scenes/: scene.h
src/scripting/: object_manager.c  object_manager.h  scripting_api.c  scripting_api.h
src/scripting/modules/: graphics.c  graphics.h  input.c  input.h  modules.c  modules.h  objects.c  objects.h  resources.c  resources.h  scenes.c  scenes.h
src/structures/: coordinates.h  hashtable.c  hashtable.h  result.c  result.h
src/systems/: controller.c  controller.h  shaders.c  shaders.h  sprite_manager.h  window.c  window.h
src/util/: crypto.c  crypto.h  ext.h  log.c  log.h  msgbox.c  msgbox.h  stringext.c  stringext.h
src/win32/: files.c  files.h  msgbox.c  msgbox.h
